$Id$

Denora v1.4.2-SVN
-----------------

Additions
n/a

Changes
08/08/22 r204 Channel logging is now enabled even in debug mode

Fixes
08/08/22 r208 Windows issue finally fixed: time_t need to be casted [closes #435]
08/08/22 r207 firstadded was not set for chanstats global channel
08/08/22 r204 Fixed chanstats values screwing up in some cases [closes #507]
08/08/21 r203 Set SO_REUSEADDR to avoid a (harmless) socket bind error

Removals
n/a

Developers
Denora Team <dev@denorastats.org>

Contributors
n/a


Denora v1.4.1
-------------

Additions
08/08/15 r201 Added QUICKSTART documentation for *nix and windows
08/08/15 r201 [2] Added Windows NSIS installer script
08/07/14 r191 Added zline/shun/jupe support for p10 ircds [closes #504]
08/06/27 r188 Added user mode +D to nefarious protocol module [closes #504]

Changes
08/08/13 r198 Updated GeoIP.dat
08/07/11 r190 Improved version.log entry generation and added rev to Changes
08/07/10 r189 Updated MySQL libs detection routine
08/07/10 r189 Threads and Crypto are now on by default in Config [closes #508]
08/07/10 r189 Changed layout of the Changes file
08/05/31 r187 Updated svn url in dm script

Fixes
08/08/14 r200 Fixed Denora crashing on Windows with SQL enabled [closes #435]
08/08/14 r200 [1] Fixed crypt libraries detection on BSD
08/08/13 r199 Fixed incorrect memory handling in strnrepl
08/08/07 r197 Fixed not resetting server connecttime on startup [closes #510]
08/07/18 r193 Fixed various Charybdis issues [closes #509]
08/07/14 r192 Fixed corrupt chanstats counts on some systems [closes #507]
08/05/31 r187 Fixed LOG_PROTOCOL showing even with protocoldebug off
08/05/19 r186 Fixed exclude setting wrong flag on db save [closes #496]
08/05/18 r185 Fixed compiling on Windows

Removals
n/a

Developers
Denora Team <dev@denorastats.org>

Contributors
[1] Jobe <jobe@mdbnet.co.uk>
[2] katsklaw <katsklaw@ircmojo.net>


Denora Version 1.4.0
--------------------
Provided by Denora Team <dev@denorastats.org> - 2008